wrap the title of a panel and dashboard search results. fixes #7203 (#7213)

--- a/public/sass/components/_search.scss
+++ b/public/sass/components/_search.scss
@@ -68,9 +68,9 @@
   }
 
   .search-item {
+    word-wrap: break-word;
     display: block;
     padding: 3px 10px;
-    white-space: nowrap;
     background-color: $grafanaListBackground;
     margin-bottom: 4px;
 
